# koupang

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  STYLE.md  docker-compose.infra.yml
.beads/: issues.jsonl
.claude/: log-prompt.sh  review-standards.md  settings.json
.jujo/: config.toml
.plan/: PLAN.md  all-session-prompts-archive.md  bootstrap-recipe.md  br-to-fl-mapping.json  critical-user-flows.md  flows.md  human-todos.md  hyperswitch-research.md  insights-improvement-plan.md  kafka-consumer-dlq.md  local-infra.md  migrate-br-to-fl.py  mvp-milestone.md  outbox-improvement-plan.md  outbox-migration-template.sql  patterns.md  persistent-jobs-migration-template.sql  plan-1-shared-infrastructure.md  plan-2-cart-service.md  plan-3-order-payment.md  plan-4-workflow-docs.md  prd-persistent-jobs.md  progress-summary-pt1.md  progress-summary-pt2.md  saga-integration-tests.md  test-standards.md
.plan/adr/: 003-layered-architecture.md  004-testcontainers-over-mocks.md  006-email-trait-with-mock.md  007-money-handling-with-rust-decimal.md  008-claims-based-auth-for-downstream-services.md  009-ltree-for-category-hierarchy.md  010-inter-service-communication.md  012-data-oriented-business-rules.md
.plan/persistent-jobs/: design.md  plan.md  questions.md  research-external.md  research-jobs.md  research.md  structure.md
bff-gateway/: Cargo.toml
cart/: CLAUDE.md  Cargo.toml
cart/src/: lib.rs  main.rs
cart/src/cart/: domain.rs  dtos.rs  error.rs  mod.rs  repository.rs  routes.rs  rules.rs  service.rs  value_objects.rs
cart/tests/: integration.rs
cart/tests/cart/: repository_test.rs  router_test.rs  service_test.rs
cart/tests/common/: mod.rs
catalog/: CLAUDE.md  Cargo.toml
catalog/migrations/: 202602241106_init.sql  202602241739_add_categories_brands.sql  202603161840_add_inventory_reservations.sql
catalog/src/: lib.rs  main.rs  test_fixtures.rs
catalog/src/brands/: domain.rs  dtos.rs  entities.rs  mod.rs  repository.rs  routes.rs  service.rs  value_objects.rs
catalog/src/categories/: domain.rs  dtos.rs  entities.rs  repository.rs  routes.rs  service.rs  value_objects.rs
catalog/src/common/: value_objects.rs
catalog/src/consumers/: handler.rs  mod.rs  order_events.rs
catalog/src/inventory/: entities.rs  repository.rs  service.rs
catalog/src/products/: domain.rs  dtos.rs  entities.rs  repository.rs  routes.rs  service.rs  value_objects.rs
catalog/tests/: integration.rs
catalog/tests/brands/: repository_test.rs  router_test.rs  service_test.rs
catalog/tests/categories/: repository_test.rs  router_test.rs  service_test.rs
catalog/tests/common/: mod.rs
catalog/tests/inventory/: mod.rs  repository_test.rs  service_test.rs
catalog/tests/products/: cache_test.rs  mod.rs  repository_test.rs  router_test.rs  service_test.rs
docker/: init-databases.sh
docs/: KAFKA_GUIDE.md  PERSISTENT_JOB_LIFECYCLE.md  ordering-saga-flows.md
docs/adr/: 001-cargo-workspace-per-service.md  002-uuid-v7-primary-keys.md  005-jwt-access-refresh-tokens.md  011-event-schema-conventions.md  template.md  (+1 more)
identity/: CLAUDE.md  Cargo.toml
identity/migrations/: 202602231305_init.sql  202602231752_add_email_verification.sql  202602231807_add_password_reset_tokens.sql  202602232000_add_role_check_constraint.sql
identity/src/: lib.rs  main.rs
identity/src/users/: domain.rs  dtos.rs  entities.rs  grpc_service.rs  mod.rs  repository.rs  routes.rs  service.rs  value_objects.rs
identity/tests/common/: mod.rs
identity/tests/users/: grpc_service_test.rs  mod.rs  repository_test.rs  router_test.rs  service_test.rs
moderation/: Cargo.toml
notification/: Cargo.toml
order/: CLAUDE.md  Cargo.toml
order/migrations/: 202603151900_init.sql
order/src/: lib.rs  main.rs  test_fixtures.rs
order/src/consumers/: handler.rs  inventory_events.rs  mod.rs  payment_events.rs
order/src/events/: types.rs
order/src/orders/: dtos.rs  entities.rs  error.rs  mod.rs  repository.rs  routes.rs  rules.rs  service.rs  value_objects.rs
order/src/outbox/: mod.rs
order/tests/: integration.rs
order/tests/common/: mod.rs
order/tests/orders/: consumer_test.rs  repository_test.rs  router_test.rs  service_test.rs
payment/: CLAUDE.md  Cargo.toml
saga-tests/: Cargo.toml
saga-tests/tests/: saga_test.rs
saga-tests/tests/common/: mod.rs
scripts/: export-sandbox.sh
shared/: CLAUDE.md  Cargo.toml
shared/proptest-regressions/: rules.txt
shared/proto/: identity.proto
shared/src/: auth.rs  circuit_breaker.rs  distributed_lock.rs  dto_helpers.rs  errors.rs  health.rs  lib.rs  observability.rs  responses.rs  rules.rs  server.rs
shared/src/auth/: guards.rs  jwt.rs  middleware.rs  mod.rs  role.rs
shared/src/cache/: mod.rs
shared/src/config/: auth_config.rs  consumer_config.rs  db_config.rs  job_runner_config.rs  kafka_config.rs  mod.rs  redis_config.rs  relay_config.rs
shared/src/db/: mod.rs  pagination_support.rs  transaction_support.rs
shared/src/email/: mod.rs
shared/src/events/: admin.rs  consumer.rs  health.rs  metrics.rs  mock.rs  mock_handler.rs  mod.rs  producer.rs  publisher.rs  types.rs
shared/src/grpc/: mod.rs
shared/src/jobs/: mod.rs  registry.rs  repository.rs  runner.rs  types.rs
shared/src/new_types/: mod.rs  money.rs  value_objects.rs
shared/src/outbox/: LIFECYCLE.md  dedup.rs  metrics.rs  mod.rs  processed.rs  relay.rs  repository.rs  types.rs
shared/src/test_utils/: auth.rs  db.rs  events.rs  grpc.rs  http.rs  kafka.rs  mod.rs  redis.rs
shared/tests/: consumer_metrics_tests.rs  consumer_tests.rs  distributed_lock_tests.rs  job_tests.rs  kafka_health_tests.rs  kafka_tests.rs  outbox_dedup_tests.rs  outbox_kafka_tests.rs  outbox_metrics_test.rs  outbox_migration_test.rs  outbox_processed_tests.rs  outbox_relay_tests.rs  outbox_repository_tests.rs  redis_cache_tests.rs
shared/tests/migrations/: 000001_outbox_events.sql  000002_processed_events.sql  000003_outbox_status_transition_trigger.sql  000004_persistent_jobs.sql
shipping/: Cargo.toml
util-scripts/: adr.sh  build.sh  check.sh  fmt.sh  migration.sh  run.sh  test.sh
(+77 files in other folders)
