[package]
name = "catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
shared = { path = "../shared" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "macros", "migrate", "postgres", "chrono", "json", "uuid", "rust_decimal"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"
rust_decimal = { version = "1.4.0", features = ["serde"] }
async-trait = "0.1"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
regex = "1"
once_cell = "1"

[features]
test-utils = ["shared/test-utils"]

[dev-dependencies]
shared = { path = "../shared", features = ["test-utils"] }
