[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
shared = { path = "../shared" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "macros", "migrate", "postgres", "chrono", "json", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.43"
argon2 = "0.5.3"
async-trait = "0.1"
rand = "0.10.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
serde_json = "1.0.149"
tonic = "0.14.5"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
shared = { path = "../shared", features = ["test-utils"] }
