[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "postgres" , "uuid"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
#rust_decimal = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
jsonwebtoken = { version =  "10.3.0", features = ["rust_crypto"] }
axum = "0.8.8"
tokio = "1.49.0"
async-trait = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
