[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "postgres" , "uuid"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
#rust_decimal = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
jsonwebtoken = { version =  "10.3.0", features = ["rust_crypto"] }
axum = "0.8.8"
tokio = "1.49.0"
async-trait = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
tonic-prost = "0.14.5"
testcontainers-modules = { version = "0.15", features = ["redis", "postgres"], optional = true }
tokio-stream = { version = "0.1", optional = true }
http-body-util = { version = "0.1", optional = true }

[features]
test-utils = ["dep:testcontainers-modules", "dep:tokio-stream", "dep:http-body-util", "tokio/net"]

[build-dependencies]
tonic-prost-build = "0.14.5"
